--- a/index.html
+++ b/index.html
@@ -12,27 +12,14 @@ rap.min.css" rel="stylesheet">
 
 <body>
 <div class="container">
+
  <h1>My First Bootstrap Page</h1>
-</div>
-<div class="row">
-    <div class="col border">
-        <p>Grid1</p>
-    </div>
-    <div class="col border">
-        <p>Grid2</p>
-    </div>
-    <div class="col border">
-        <p>Grid3</p>
-    </div>
-    <div class="col border">
-        <p>Grid4</p>
+    <div>
+      <a href="CV.html">CV</a>
+      <a href="Portfolio.html">Portfolio</a>
+      <a href="readme.txt">Readme</a>
     </div>
   </div>
-<div> 
-<p>This part is inside a .container class.</p>
-<p>The .container class provides a responsive fixed width container.</p>
-<p></p>
-</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootst
 rap.bundle.min.js"></script>
 </body>
