--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ rap.min.css" rel="stylesheet">
 
 <body>
 <div class="container">
-
+<!--
+    this is how to comment
+--> 
  <h1>My First Bootstrap Page</h1>
     <div>
       <a href="CV.html">CV</a>
