--- a/CV.html
+++ b/CV.html
@@ -9,6 +9,14 @@ rap.min.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
+    <h1>CV</h1>
+    <div class="div-1">
+        <a href="index.html">Hjem</a>
+        <a href="Portfolio.html">Portfolio</a>
+        <a href="readme.txt">Readme</a>
+      </div>
+
+
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootst
 rap.bundle.min.js"></script>
