--- a/index.html
+++ b/index.html
@@ -16,12 +16,25 @@ rap.min.css" rel="stylesheet">
     this is how to comment
 --> 
  <h1>My First Bootstrap Page</h1>
-    <div>
+    <div class="div-1">
       <a href="CV.html">CV</a>
       <a href="Portfolio.html">Portfolio</a>
       <a href="readme.txt">Readme</a>
     </div>
   </div>
+
+<p><br> ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper dignissim eros, et sollicitudin ligula condimentum vitae.
+   Nam ac tincidunt turpis. Maecenas blandit blandit turpis eget congue. Nunc eu lorem ut lacus luctus interdum. Curabitur iaculis auctor laoreet. 
+   Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla vel semper nisi, vel iaculis augue. 
+   Duis gravida lacus sed risus aliquam sodales.<br>
+  Integer condimentum justo id convallis elementum. Mauris aliquet pulvinar tellus id tristique. 
+  In eget justo massa. Aliquam erat volutpat. Suspendisse vitae libero semper, elementum augue nec, pharetra lacus. 
+  Vivamus in tincidunt augue, sit amet accumsan purus. Pellentesque condimentum, augue nec viverra varius, odio nisi egestas tortor, 
+  nec vestibulum metus dolor ac augue. In interdum massa sit amet massa eleifend, consequat efficitur urna auctor. 
+  Phasellus quis mauris arcu. Curabitur volutpat vehicula est a pulvinar. Donec et diam et leo luctus consectetur lobortis vitae dui. 
+  Vivamus molestie quis lectus eu lobortis.</p>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootst
 rap.bundle.min.js"></script>
 </body>
