Added contact page -removed readme link

--- a/CV.html
+++ b/CV.html
@@ -1,24 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="Styles.css">
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootst
+ <title>CV</title>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootst
 rap.min.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<link rel="stylesheet" href="Styles.css">
 </head>
+
 <body>
-    <h1>CV</h1>
-    <div class="div-1">
-        <a href="index.html">Hjem</a>
-        <a href="Portfolio.html">Portfolio</a>
-        <a href="readme.txt">Readme</a>
-      </div>
+<section id="overlay">
+<header>
+ <h1>CV</h1>
 
+    <nav class="div-1">
+      <a href="index.html">Hjem</a>
+      <a href="Portfolio.html">Portfolio</a>
+      <a href="Kontakt.html">Kontakt</a>
+    </nav>
+</header>
+<article class="div-2">
+<p><br> ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper dignissim eros, et sollicitudin ligula condimentum vitae.
+   Nam ac tincidunt turpis. Maecenas blandit blandit turpis eget congue. Nunc eu lorem ut lacus luctus interdum. Curabitur iaculis auctor laoreet. 
+   Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla vel semper nisi, vel iaculis augue. 
+   Duis gravida lacus sed risus aliquam sodales.<br>
+  Integer condimentum justo id convallis elementum. Mauris aliquet pulvinar tellus id tristique. 
+  In eget justo massa. Aliquam erat volutpat. Suspendisse vitae libero semper, elementum augue nec, pharetra lacus. 
+  Vivamus in tincidunt augue, sit amet accumsan purus. Pellentesque condimentum, augue nec viverra varius, odio nisi egestas tortor, 
+  nec vestibulum metus dolor ac augue. In interdum massa sit amet massa eleifend, consequat efficitur urna auctor. 
+  Phasellus quis mauris arcu. Curabitur volutpat vehicula est a pulvinar. Donec et diam et leo luctus consectetur lobortis vitae dui. 
+  Vivamus molestie quis lectus eu lobortis.</p>
+  <p><br> ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper dignissim eros, et sollicitudin ligula condimentum vitae.
+    Nam ac tincidunt turpis. Maecenas blandit blandit turpis eget congue. Nunc eu lorem ut lacus luctus interdum. Curabitur iaculis auctor laoreet. 
+    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla vel semper nisi, vel iaculis augue. 
+    Duis gravida lacus sed risus aliquam sodales.<br>
+   Integer condimentum justo id convallis elementum. Mauris aliquet pulvinar tellus id tristique. 
+   In eget justo massa. Aliquam erat volutpat. Suspendisse vitae libero semper, elementum augue nec, pharetra lacus. 
+   Vivamus in tincidunt augue, sit amet accumsan purus. Pellentesque condimentum, augue nec viverra varius, odio nisi egestas tortor, 
+   nec vestibulum metus dolor ac augue. In interdum massa sit amet massa eleifend, consequat efficitur urna auctor. 
+   Phasellus quis mauris arcu. Curabitur volutpat vehicula est a pulvinar. Donec et diam et leo luctus consectetur lobortis vitae dui. 
+   Vivamus molestie quis lectus eu lobortis.</p>
+   <p><br> ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper dignissim eros, et sollicitudin ligula condimentum vitae.
+    Nam ac tincidunt turpis. Maecenas blandit blandit turpis eget congue. Nunc eu lorem ut lacus luctus interdum. Curabitur iaculis auctor laoreet. 
+    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla vel semper nisi, vel iaculis augue. 
+    Duis gravida lacus sed risus aliquam sodales.<br>
+   Integer condimentum justo id convallis elementum. Mauris aliquet pulvinar tellus id tristique. 
+   In eget justo massa. Aliquam erat volutpat. Suspendisse vitae libero semper, elementum augue nec, pharetra lacus. 
+   Vivamus in tincidunt augue, sit amet accumsan purus. Pellentesque condimentum, augue nec viverra varius, odio nisi egestas tortor, 
+   nec vestibulum metus dolor ac augue. In interdum massa sit amet massa eleifend, consequat efficitur urna auctor. 
+   Phasellus quis mauris arcu. Curabitur volutpat vehicula est a pulvinar. Donec et diam et leo luctus consectetur lobortis vitae dui. 
+   Vivamus molestie quis lectus eu lobortis.</p>
+   <p><br> ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper dignissim eros, et sollicitudin ligula condimentum vitae.
+    Nam ac tincidunt turpis. Maecenas blandit blandit turpis eget congue. Nunc eu lorem ut lacus luctus interdum. Curabitur iaculis auctor laoreet. 
+    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla vel semper nisi, vel iaculis augue. 
+    Duis gravida lacus sed risus aliquam sodales.<br>
+   Integer condimentum justo id convallis elementum. Mauris aliquet pulvinar tellus id tristique. 
+   In eget justo massa. Aliquam erat volutpat. Suspendisse vitae libero semper, elementum augue nec, pharetra lacus. 
+   Vivamus in tincidunt augue, sit amet accumsan purus. Pellentesque condimentum, augue nec viverra varius, odio nisi egestas tortor, 
+   nec vestibulum metus dolor ac augue. In interdum massa sit amet massa eleifend, consequat efficitur urna auctor. 
+   Phasellus quis mauris arcu. Curabitur volutpat vehicula est a pulvinar. Donec et diam et leo luctus consectetur lobortis vitae dui. 
+   Vivamus molestie quis lectus eu lobortis.</p>
+</article>
 
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootst
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootst
 rap.bundle.min.js"></script>
+</section>  
 </body>
 </html>
