--- a/Portfolio.html
+++ b/Portfolio.html
@@ -21,7 +21,7 @@ rap.min.css" rel="stylesheet">
     </nav>
 </header>
 <article class="div-2">
-<p><br> ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper dignissim eros, et sollicitudin ligula condimentum vitae.
+<p><br>Denne Hjemmeside er opbygget fra bunden af mig, Jonas Østergaard.<br>Jeg har brugt HTML og CSS for at skabe denne hjemmeside!<br><br> ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper dignissim eros, et sollicitudin ligula condimentum vitae.
    Nam ac tincidunt turpis. Maecenas blandit blandit turpis eget congue. Nunc eu lorem ut lacus luctus interdum. Curabitur iaculis auctor laoreet. 
    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla vel semper nisi, vel iaculis augue. 
    Duis gravida lacus sed risus aliquam sodales.<br>
