--- a/index.html
+++ b/index.html
@@ -21,50 +21,19 @@ rap.min.css" rel="stylesheet">
     </nav>
 </header>
 <article class="div-2">
-<p><br> ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper dignissim eros, et sollicitudin ligula condimentum vitae.
-   Nam ac tincidunt turpis. Maecenas blandit blandit turpis eget congue. Nunc eu lorem ut lacus luctus interdum. Curabitur iaculis auctor laoreet. 
-   Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla vel semper nisi, vel iaculis augue. 
-   Duis gravida lacus sed risus aliquam sodales.<br>
-  Integer condimentum justo id convallis elementum. Mauris aliquet pulvinar tellus id tristique. 
-  In eget justo massa. Aliquam erat volutpat. Suspendisse vitae libero semper, elementum augue nec, pharetra lacus. 
-  Vivamus in tincidunt augue, sit amet accumsan purus. Pellentesque condimentum, augue nec viverra varius, odio nisi egestas tortor, 
-  nec vestibulum metus dolor ac augue. In interdum massa sit amet massa eleifend, consequat efficitur urna auctor. 
-  Phasellus quis mauris arcu. Curabitur volutpat vehicula est a pulvinar. Donec et diam et leo luctus consectetur lobortis vitae dui. 
-  Vivamus molestie quis lectus eu lobortis.</p>
-  <p><br> ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper dignissim eros, et sollicitudin ligula condimentum vitae.
-    Nam ac tincidunt turpis. Maecenas blandit blandit turpis eget congue. Nunc eu lorem ut lacus luctus interdum. Curabitur iaculis auctor laoreet. 
-    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla vel semper nisi, vel iaculis augue. 
-    Duis gravida lacus sed risus aliquam sodales.<br>
-   Integer condimentum justo id convallis elementum. Mauris aliquet pulvinar tellus id tristique. 
-   In eget justo massa. Aliquam erat volutpat. Suspendisse vitae libero semper, elementum augue nec, pharetra lacus. 
-   Vivamus in tincidunt augue, sit amet accumsan purus. Pellentesque condimentum, augue nec viverra varius, odio nisi egestas tortor, 
-   nec vestibulum metus dolor ac augue. In interdum massa sit amet massa eleifend, consequat efficitur urna auctor. 
-   Phasellus quis mauris arcu. Curabitur volutpat vehicula est a pulvinar. Donec et diam et leo luctus consectetur lobortis vitae dui. 
-   Vivamus molestie quis lectus eu lobortis.</p>
-   <p><br> ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper dignissim eros, et sollicitudin ligula condimentum vitae.
-    Nam ac tincidunt turpis. Maecenas blandit blandit turpis eget congue. Nunc eu lorem ut lacus luctus interdum. Curabitur iaculis auctor laoreet. 
-    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla vel semper nisi, vel iaculis augue. 
-    Duis gravida lacus sed risus aliquam sodales.<br>
-   Integer condimentum justo id convallis elementum. Mauris aliquet pulvinar tellus id tristique. 
-   In eget justo massa. Aliquam erat volutpat. Suspendisse vitae libero semper, elementum augue nec, pharetra lacus. 
-   Vivamus in tincidunt augue, sit amet accumsan purus. Pellentesque condimentum, augue nec viverra varius, odio nisi egestas tortor, 
-   nec vestibulum metus dolor ac augue. In interdum massa sit amet massa eleifend, consequat efficitur urna auctor. 
-   Phasellus quis mauris arcu. Curabitur volutpat vehicula est a pulvinar. Donec et diam et leo luctus consectetur lobortis vitae dui. 
-   Vivamus molestie quis lectus eu lobortis.</p>
-   <p><br> ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper dignissim eros, et sollicitudin ligula condimentum vitae.
-    Nam ac tincidunt turpis. Maecenas blandit blandit turpis eget congue. Nunc eu lorem ut lacus luctus interdum. Curabitur iaculis auctor laoreet. 
-    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla vel semper nisi, vel iaculis augue. 
-    Duis gravida lacus sed risus aliquam sodales.<br>
-   Integer condimentum justo id convallis elementum. Mauris aliquet pulvinar tellus id tristique. 
-   In eget justo massa. Aliquam erat volutpat. Suspendisse vitae libero semper, elementum augue nec, pharetra lacus. 
-   Vivamus in tincidunt augue, sit amet accumsan purus. Pellentesque condimentum, augue nec viverra varius, odio nisi egestas tortor, 
-   nec vestibulum metus dolor ac augue. In interdum massa sit amet massa eleifend, consequat efficitur urna auctor. 
-   Phasellus quis mauris arcu. Curabitur volutpat vehicula est a pulvinar. Donec et diam et leo luctus consectetur lobortis vitae dui. 
-   Vivamus molestie quis lectus eu lobortis.</p>
+  <h2>Jonas Østergaard</h2>
+<p>Denne hjemmeside har til formål at fremvise mit, Jonas Østergaard, Portfolio over de cases jeg har arbejdet på og fuldført.
+  <br>Disse findes i "Portfolio".<br>
+  Derudover vil mit CV også fremgå under "CV" og mine kontaktoplysninger vil fremgå under "kontakt"</p>
+<img src="Assets/PPPlaceholder.png" alt="placeholder" width="400px" height="500px">
+
+<p><br>Skriv om dig selv her!</p>
+
 </article>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootst
 rap.bundle.min.js"></script>
-</section>  
+</section>
+  
 </body>
 </html>
