New changes incl. background picture and screen scalability

--- a/CV.html
+++ b/CV.html
@@ -15,19 +15,23 @@ rap.min.css" rel="stylesheet">
  <h1>CV</h1>
 
     <nav class="div-1">
-      <a href="index.html">Hjem</a>
-      <a href="Portfolio.html">Portfolio</a>
-      <a href="Kontakt.html">Kontakt</a>
+        <a href="index.html">Hjem</a>
+        <a href="CV.html">CV</a>
+        <a href="Portfolio.html">Port folie</a>
+        <a href="Kontakt.html">Kontakt</a>
     </nav>
 </header>
 <article class="div-2">
 <embed src="Assets/Jonas_Østergaard_CV.pdf" width="100%" height="1350px">
-    <p class="dl">Downloads:</p>
+    <div class="dl">
+    <p>Downloads:</p>
     <ul>
-        <li>CV</li>
-        <li>Afgangseksamen HTX</li>
-        <li>Grundforløbsbevis</li>
+
+        <li class="works"><a href="/Assets/Jonas_Østergaard_CV.pdf" download>CV</a></li>
+        <li><a href="javascript:void(0)">Afgangseksamen HTX</a></li>
+        <li><a href="javascript:void(0)">Grundforløbsbevis</a></li>
     </ul>
+</div>
 </article>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootst
