--- a/index.html
+++ b/index.html
@@ -15,19 +15,25 @@ rap.min.css" rel="stylesheet">
  <h1>Hjem</h1>
 
     <nav class="div-1">
+      <a href="index.html">Hjem</a>
       <a href="CV.html">CV</a>
-      <a href="Portfolio.html">Portfolio</a>
+      <a href="Portfolio.html">Port folie</a>
       <a href="Kontakt.html">Kontakt</a>
     </nav>
 </header>
 <article class="div-2">
-  <h2>Jonas Østergaard</h2>
-<p>Denne hjemmeside har til formål at fremvise mit, Jonas Østergaard, Portfolio over de cases jeg har arbejdet på og fuldført.
-  <br>Disse findes i "Portfolio".<br>
+<h2>Jonas Østergaard</h2>
+<p>Denne hjemmeside har til formål at fremvise mit, Jonas Østergaard, Port folie over de cases jeg har arbejdet på og fuldført.
+  <br>Disse findes i "Port folie".<br>
   Derudover vil mit CV også fremgå under "CV" og mine kontaktoplysninger vil fremgå under "kontakt"</p>
-<img src="Assets/PPPlaceholder.png" alt="placeholder" width="400px" height="500px">
-
-<p><br>Skriv om dig selv her!</p>
+<img src="Assets/PPPlaceholder.png" alt="placeholder" class="pfp">
+<h2>Om mig</h2>
+<p>Jeg har i lang tid været interesseret I programmering og jeg har stiftet bekendskab med det før jeg startede på data- og kommunikationsuddannelsen.
+Indend jeg startede på Grundforløb 2. har jeg arbejdet med kode på gymnasiet. Her stiftede jeg bekendskab med flere forskellige sprog idet min uddannelses linje var rettet mod programmering og matematik.
+bla. har jeg arbejdet med php, sql og c++.<br><br>Efter gymnasiet, hvor jeg i øvrigt fik 10 til min afsluttende eksamen, prøvede jeg mig ad på datalogi studiet, men fandt hurtigt ud af, at universitet ikke var noget for mig.
+Derfor startede jeg på Tec's datatekniker uddannelse. På datatekniker uddannelsen (data- og kommunikationsuddannelsen) blev jeg lært i c#, hvor jeg fik en grundig forståelse for basis elementerne inden for kodning. Her endte jeg med et 12 tal i grundforløb 2. eksamen.
+<br>Jeg blev desuden også lært i operativ systemer og cisco router, hvor vi fik kendskab indenfor CCNA certifikatet.
+</p>
 
 </article>
 
