--- a/Kontakt.html
+++ b/Kontakt.html
@@ -17,12 +17,13 @@ rap.min.css" rel="stylesheet">
     <nav class="div-1">
       <a href="index.html">Hjem</a>
       <a href="CV.html">CV</a>
-      <a href="Portfolio.html">Portfolio</a>
+      <a href="Portfolio.html">Port folie</a>
+      <a href="Kontakt.html">Kontakt</a>
     </nav>
 </header>
 <article class="div-2">
   <h2>Kontakt Informationer:</h2>
-<p>Navn: Jonas Barigo Østergaard<br>Tlf: 53837481<br><img src="Assets/Outlook.png" width="20px" height="20px"> <a href="mailto:Jonasoe@hotmail.com">Jonasoe@hotmail.com</a><br><img src="Assets/Linkedin.png" width="20px" height="20px"> <a href="https://www.linkedin.com/in/jonas-østergaard-92875321b">Jonas Østergaard</a></p>
+<p>Jonas Barigo Østergaard<br>Tlf: 53837481<br><img src="Assets/Outlook.png" width="20px" height="20px"> <a href="mailto:Jonasoe@hotmail.com">Jonasoe@hotmail.com</a><br><img src="Assets/Linkedin.png" width="20px" height="20px"> <a href="https://www.linkedin.com/in/jonas-østergaard-92875321b">Jonas Østergaard</a></p>
 </article>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootst
