--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <title>Portfolio</title>
+ <title>Port folie</title>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootst
@@ -12,11 +12,12 @@ rap.min.css" rel="stylesheet">
 <body>
 <section id="overlay">
 <header>
- <h1>Portfolio</h1>
+ <h1>Port folie</h1>
 
     <nav class="div-1">
       <a href="index.html">Hjem</a>
       <a href="CV.html">CV</a>
+      <a href="Portfolio.html">Port folie</a>
       <a href="Kontakt.html">Kontakt</a>
     </nav>
 </header>
