--- a/Portfolio.html
+++ b/Portfolio.html
@@ -22,6 +22,17 @@ rap.min.css" rel="stylesheet">
     </nav>
 </header>
 <article class="div-2">
+
+  <h3>Det her er en button gruppe!</h3>
+
+  <div class="btn-group">
+
+    <a href="#" class="btn btn-default">Knap 1</a>
+    <a href="#" class="btn btn-default">Knap 2</a>
+    <a href="#" class="btn btn-default">Knap 3</a>
+
+  </div>
+
 <p><br>Denne Hjemmeside er opbygget fra bunden af mig, Jonas Østergaard.<br>Jeg har brugt HTML og CSS for at skabe denne hjemmeside!<br><br> ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper dignissim eros, et sollicitudin ligula condimentum vitae.
    Nam ac tincidunt turpis. Maecenas blandit blandit turpis eget congue. Nunc eu lorem ut lacus luctus interdum. Curabitur iaculis auctor laoreet. 
    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla vel semper nisi, vel iaculis augue. 
