added some forms

--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@ rap.min.css" rel="stylesheet">
 </head>
 
 <body>
+
+<div class="modal" id="myModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5>Notice!</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Denne hjemmeside er under konstruktion!</p>
+      </div>
+    </div>
+</div>
+</div>
+
 <section id="overlay">
 <header>
  <h1>Hjem</h1>
@@ -39,7 +54,14 @@ Derfor startede jeg på Tec's datatekniker uddannelse. På datatekniker uddannel
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootst
 rap.bundle.min.js"></script>
+
 </section>
-  
+
+<script>
+  var myModal = new bootstrap.Modal(document.getElementById('myModal'), {})
+  myModal.show()
+  </script>
+
+
 </body>
 </html>
