--- a/Portfolio.html
+++ b/Portfolio.html
@@ -23,16 +23,16 @@ rap.min.css" rel="stylesheet">
 </header>
 <article class="div-2">
 
+  
   <h3>Det her er en button gruppe!</h3>
 
   <div class="btn-group">
 
-    <a href="#" class="btn btn-default">Knap 1</a>
+    <a href="#formMessage" class="btn btn-default">Knap 1</a>
     <a href="#" class="btn btn-default">Knap 2</a>
     <a href="#" class="btn btn-default">Knap 3</a>
-
   </div>
-
+<div class="container my-3">
 <p><br>Denne Hjemmeside er opbygget fra bunden af mig, Jonas Østergaard.<br>Jeg har brugt HTML og CSS for at skabe denne hjemmeside!<br><br> ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper dignissim eros, et sollicitudin ligula condimentum vitae.
    Nam ac tincidunt turpis. Maecenas blandit blandit turpis eget congue. Nunc eu lorem ut lacus luctus interdum. Curabitur iaculis auctor laoreet. 
    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla vel semper nisi, vel iaculis augue. 
@@ -43,7 +43,8 @@ rap.min.css" rel="stylesheet">
   nec vestibulum metus dolor ac augue. In interdum massa sit amet massa eleifend, consequat efficitur urna auctor. 
   Phasellus quis mauris arcu. Curabitur volutpat vehicula est a pulvinar. Donec et diam et leo luctus consectetur lobortis vitae dui. 
   Vivamus molestie quis lectus eu lobortis.</p>
-  <p><br> ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper dignissim eros, et sollicitudin ligula condimentum vitae.
+</div>
+  <p>ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper dignissim eros, et sollicitudin ligula condimentum vitae.
     Nam ac tincidunt turpis. Maecenas blandit blandit turpis eget congue. Nunc eu lorem ut lacus luctus interdum. Curabitur iaculis auctor laoreet. 
     Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla vel semper nisi, vel iaculis augue. 
     Duis gravida lacus sed risus aliquam sodales.<br>
@@ -63,17 +64,45 @@ rap.min.css" rel="stylesheet">
    nec vestibulum metus dolor ac augue. In interdum massa sit amet massa eleifend, consequat efficitur urna auctor. 
    Phasellus quis mauris arcu. Curabitur volutpat vehicula est a pulvinar. Donec et diam et leo luctus consectetur lobortis vitae dui. 
    Vivamus molestie quis lectus eu lobortis.</p>
-   <p><br> ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper dignissim eros, et sollicitudin ligula condimentum vitae.
-    Nam ac tincidunt turpis. Maecenas blandit blandit turpis eget congue. Nunc eu lorem ut lacus luctus interdum. Curabitur iaculis auctor laoreet. 
-    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla vel semper nisi, vel iaculis augue. 
-    Duis gravida lacus sed risus aliquam sodales.<br>
-   Integer condimentum justo id convallis elementum. Mauris aliquet pulvinar tellus id tristique. 
-   In eget justo massa. Aliquam erat volutpat. Suspendisse vitae libero semper, elementum augue nec, pharetra lacus. 
-   Vivamus in tincidunt augue, sit amet accumsan purus. Pellentesque condimentum, augue nec viverra varius, odio nisi egestas tortor, 
-   nec vestibulum metus dolor ac augue. In interdum massa sit amet massa eleifend, consequat efficitur urna auctor. 
-   Phasellus quis mauris arcu. Curabitur volutpat vehicula est a pulvinar. Donec et diam et leo luctus consectetur lobortis vitae dui. 
-   Vivamus molestie quis lectus eu lobortis.</p>
+
 </article>
+<section id="formMessage">
+
+<div class="container-lg">
+  <div class="text-center">
+    <h2 class="pt-5">Skriv en besked til mig!</h2>
+    <p class="lead">Har du sprørgsmål eller andet? så skriv her! (not actually implemented yet)</p>
+  </div>
+<div class="row justify-content-center my-5">
+
+
+
+<div class="col-lg-6">
+
+    <form>
+      <label for="email" class="form-label">E-mail adresse her:</label><br>
+      <input type="email" class="form-control" id="email" placeholder="e.g. eksempel@mail.com"><br>
+
+      <label for="name" class="form-label">Name:</label><br>
+      <input type="text" class="form-control" id="name" placeholder="e.g. Jonas"><br>
+
+
+        <label for="question" class="form-label">Dit sprørgsmål:</label><br>
+        <textarea id="question" cols="62" rows="10" placeholder="Skriv her..."></textarea>
+
+        <div class="mb-4 text-end">
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+
+    </form>
+
+</div>
+
+</div>
+</div>
+
+</section>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootst
 rap.bundle.min.js"></script>
