--- a/Portfolio.html
+++ b/Portfolio.html
@@ -80,10 +80,10 @@ rap.min.css" rel="stylesheet">
 <div class="col-lg-6">
 
     <form>
-      <label for="email" class="form-label">E-mail adresse her:</label><br>
+      <label for="email" class="form-label">E-mail adresse:</label><br>
       <input type="email" class="form-control" id="email" placeholder="e.g. eksempel@mail.com"><br>
 
-      <label for="name" class="form-label">Name:</label><br>
+      <label for="name" class="form-label">Navn:</label><br>
       <input type="text" class="form-control" id="name" placeholder="e.g. Jonas"><br>
 
 
