More updates and resizing of profilepicture

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ rap.min.css" rel="stylesheet">
 <p>Denne hjemmeside har til formål at fremvise mit, Jonas Østergaard, Port folie over de cases jeg har arbejdet på og fuldført.
   <br>Disse findes i "Port folie".<br>
   Derudover vil mit CV også fremgå under "CV" og mine kontaktoplysninger vil fremgå under "kontakt"</p>
-<img src="Assets/PPPlaceholder.png" alt="placeholder" class="pfp">
+<img src="Assets/profilbillede.jpg" alt="placeholder" class="pfp">
 <h2>Om mig</h2>
 <p>Jeg har i lang tid været interesseret I programmering og jeg har stiftet bekendskab med det før jeg startede på data- og kommunikationsuddannelsen.
 Indend jeg startede på Grundforløb 2. har jeg arbejdet med kode på gymnasiet. Her stiftede jeg bekendskab med flere forskellige sprog idet min uddannelses linje var rettet mod programmering og matematik.
