Updated some text and position of buttons

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ bla. har jeg arbejdet med php, sql og c++.<br><br>Efter gymnasiet, hvor jeg i ø
 Derfor startede jeg på Tec's datatekniker uddannelse. På datatekniker uddannelsen (data- og kommunikationsuddannelsen) blev jeg lært i c#, hvor jeg fik en grundig forståelse for basis elementerne inden for kodning. Her endte jeg med et 12 tal i grundforløb 2. eksamen.
 <br>Jeg blev desuden også lært i operativ systemer og cisco router, hvor vi fik kendskab indenfor CCNA certifikatet.
 </p>
+<p>Nu glæder jeg mig til at gå igang med at lære forskellige sprog. Lige nu håber jeg på at få viden indenfor javascript eller php, således at jeg kan koble det sammen med min hjemmeside.</p>
 
 </article>
 
