--- a/Portfolio.html
+++ b/Portfolio.html
@@ -22,18 +22,22 @@ rap.min.css" rel="stylesheet">
     </nav>
 </header>
 <article class="div-2">
-
+<p><br>Denne Hjemmeside er opbygget fra bunden af mig, Jonas Østergaard.<br>Jeg har brugt HTML, CSS og Bootstrap5 for at skabe denne hjemmeside!<br><br>
   
-  <h3>Det her er en button gruppe!</h3>
+ <b>Denne side vil løbende blive opdateret med de opgaver jeg bliver stillet og fuldfører.</b><br></p>
 
-  <div class="btn-group">
+ <h3><br>Det her er en button gruppe!</h3>
 
-    <a href="#formMessage" class="btn btn-default">Knap 1</a>
-    <a href="#" class="btn btn-default">Knap 2</a>
-    <a href="#" class="btn btn-default">Knap 3</a>
-  </div>
+ <div class="btn-group">
+
+   <a href="#formMessage" class="btn btn-default">Knap 1</a>
+   <a href="#" class="btn btn-default">Knap 2</a>
+   <a href="#" class="btn btn-default">Knap 3</a>
+ </div>
+ <p>Knap 1 fører dig længere ned på siden. <br>Knap 2 og Knap 3 gør ingenting</p>
 <div class="container my-3">
-<p><br>Denne Hjemmeside er opbygget fra bunden af mig, Jonas Østergaard.<br>Jeg har brugt HTML og CSS for at skabe denne hjemmeside!<br><br> ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper dignissim eros, et sollicitudin ligula condimentum vitae.
+  
+  <p><br> ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper dignissim eros, et sollicitudin ligula condimentum vitae.
    Nam ac tincidunt turpis. Maecenas blandit blandit turpis eget congue. Nunc eu lorem ut lacus luctus interdum. Curabitur iaculis auctor laoreet. 
    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla vel semper nisi, vel iaculis augue. 
    Duis gravida lacus sed risus aliquam sodales.<br>
