Changed text for the message me section

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -75,7 +75,7 @@ rap.min.css" rel="stylesheet">
 <div class="container-lg">
   <div class="text-center">
     <h2 class="pt-5">Skriv en besked til mig!</h2>
-    <p class="lead">Har du sprørgsmål eller andet? så skriv her! (not actually implemented yet)</p>
+    <p class="lead">Har du sprørgsmål eller andet? så skriv her! (Doesn't work yet/Virker ikke endnu)</p>
   </div>
 <div class="row justify-content-center my-5">
 
