--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ rap.min.css" rel="stylesheet">
 <p>Denne hjemmeside har til formål at fremvise mit, Jonas Østergaard, Port folie over de cases jeg har arbejdet på og fuldført.
   <br>Disse findes i "Port folie".<br>
   Derudover vil mit CV også fremgå under "CV" og mine kontaktoplysninger vil fremgå under "kontakt"</p>
-<img src="Assets/profilbillede.jpg" alt="profilbillede" class="pfp">
+<img src="Assets/profilbillede.jpg" alt="{profilbillede}" class="pfp">
 <h2>Om mig</h2>
 <p>Jeg har i lang tid været interesseret I programmering og jeg har stiftet bekendskab med det før jeg startede på data- og kommunikationsuddannelsen.
 Indend jeg startede på Grundforløb 2. har jeg arbejdet med kode på gymnasiet. Her stiftede jeg bekendskab med flere forskellige sprog idet min uddannelses linje var rettet mod programmering og matematik.
@@ -49,7 +49,7 @@ bla. har jeg arbejdet med php, sql og c++.<br><br>Efter gymnasiet, hvor jeg i ø
 Derfor startede jeg på Tec's datatekniker uddannelse. På datatekniker uddannelsen (data- og kommunikationsuddannelsen) blev jeg lært i c#, hvor jeg fik en grundig forståelse for basis elementerne inden for kodning. Her endte jeg med et 12 tal i grundforløb 2. eksamen.
 <br>Jeg blev desuden også lært i operativ systemer og cisco router, hvor vi fik kendskab indenfor CCNA certifikatet.
 </p>
-<p>Nu glæder jeg mig til at gå igang med at lære forskellige sprog. Lige nu håber jeg på at få viden indenfor javascript eller php, således at jeg kan koble det sammen med min hjemmeside.</p>
+<p>Nu glæder jeg mig til at gå igang med at lære forskellige sprog. Lige nu håber jeg på, at lære et backendsprog således, at jeg kan gøre min hjemmeside mere advanceret.</p>
 
 </article>
 
