--- a/CV.html
+++ b/CV.html
@@ -28,7 +28,7 @@ rap.min.css" rel="stylesheet">
     <ul>
 
         <li class="works"><a href="/Assets/Jonas_Østergaard_CV.pdf" download>CV</a></li>
-        <li><a href="javascript:void(0)">Afgangseksamen HTX</a></li>
+        <li><a href="javascript:void(0)">afgangseksamen HTX</a></li>
         <li><a href="javascript:void(0)">Grundforløbsbevis</a></li>
     </ul>
 </div>
