--- a/Kontakt.html
+++ b/Kontakt.html
@@ -22,7 +22,7 @@ rap.min.css" rel="stylesheet">
     </nav>
 </header>
 <article class="div-2">
-  <h2>Kontakt Informationer:</h2>
+  <h2>Kontakt Informationer</h2>
 <p>Jonas Barigo Østergaard<br>Tlf: 53837481<br><img src="Assets/Outlook.png" width="20px" height="20px"> <a href="mailto:Jonasoe@hotmail.com">Jonasoe@hotmail.com</a><br><img src="Assets/Linkedin.png" width="20px" height="20px"> <a href="https://www.linkedin.com/in/jonas-østergaard-92875321b">Jonas Østergaard</a></p>
 </article>
 
